# pronosticos

./: README.md  criptobro.ipynb  criptobro_2.ipynb  criptobro_2.ipynb:Zone.Identifier  modelo_loteria_lstm.h5  predicciones_historial.csv  scaler.pkl  transform_data.ipynb
data/: 20250819_melate.csv  20250819_revancha.csv  Melate_pakin.csv  download_melate.sh
pronosticos-project/: pyproject.toml
