[project]
name = "pronosticos-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio",email = "vntoneeo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "alpha-vantage (>=3.0.0,<4.0.0)",
    "python-binance (>=1.0.29,<2.0.0)",
    "cryptocompare (>=0.7.6,<0.8.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[tool.poetry]
packages = [{include = "pronosticos_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
